--- a/Ai-MarTech.html
+++ b/Ai-MarTech.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>MarTech Zone Blog - Xu hướng AI và Martech - Doanh nghiệp có nên đầu tư?</title>
+    <title>Xu hướng AI và Martech - Doanh nghiệp có nên đầu tư?</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -69,25 +69,43 @@
 
 <h2 class="mb-3 mt-5">1. AI là gì?</h2>
 
-<p>AI (Artificial intelligence) là trí thông minh nhân tạo. Nó là sự mô phỏng các quá trình trí tuệ của con người bằng máy móc, đặc biệt là các hệ thống hệ máy tính. Các ứng dụng cụ thể của AI bao gồm xử lý các ngôn ngữ tự nhiên, nhận dạng giọng nói và thị giác, quản lý hệ thống… Từ việc giám sát các quy trình chính tại các công ty hàng đầu đến giúp doanh nghiệp nhỏ tăng cường nỗ lực tiếp thị, mọi tổ chức (lớn và nhỏ) giờ đây đều có quyền truy cập vào công nghệ hỗ trợ AI.</p>
-<p>Tuy nhiên, không chỉ người tiêu dùng có thể ngạc nhiên khi nghe điều đó. Một số doanh nghiệp cũng bắt đầu bị tụt lại phía sau do thiếu thông tin về sức mạnh của AI và nhiều cách có thể được sử dụng để tối ưu hóa nơi làm việc. Và thậm chí một số doanh nghiệp nhận thức được sức mạnh của nó cũng không thích nghi được.</p>
+<p>AI hay Artificial intelligence được hiểu là trí thông minh nhân tạo, nó mô phỏng các quá trình trí tuệ của con người bằng máy móc, đặc biệt là các hệ thống hệ máy tính. Ứng dụng cụ thể của AI bao gồm xử lý các ngôn ngữ tự nhiên, quản lý hệ thống, nhận dạng giọng nói và thị giác máy tính,..</p>
+<p>Do xử lý được lượng lớn dữ liệu lớn và đưa ra được dự đoán chính xác hơn khả năng của con người, AI với khả năng học tập sâu đang ngày càng phát triển nhanh chóng và trở nên nổi tiếng, biến các dữ liệu thành thông tin có thể thực hiện được</p>
 <p class="mb-5">
             <img src="images/2094084_5002_4.jpg" alt="" class="img-fluid">
             </p>
-            <p>Một doanh nghiệp không sử dụng AI có thể sẽ thấy mình có các quy trình tiếp thị kém hiệu quả hơn so với một doanh nghiệp khác đang sử dụng tất cả các công cụ quảng cáo tích hợp AI mới nhất. Bên cạnh đó, một doanh nghiệp cũng có thể phải đối mặt với các mối đe dọa lớn hơn. Khi các đối thủ cạnh tranh triển khai AI để giảm chi phí và tăng tốc độ và hiệu quả trên mọi khía cạnh kinh doanh của họ, một công ty chưa triển khai AI sẽ phải vật lộn để theo kịp giá cả, tốc độ và hiệu quả của đối thủ.</p>
-            <h3 class="mb-3 mt-5">3.Hiểu xu hướng mới nhất</h2>
-            <p>Dù lớn hay nhỏ, mọi doanh nghiệp đều có thể bắt đầu thử nghiệm trí tuệ nhân tạo và gặt hái nhiều lợi ích từ việc sử dụng nó. Điều quan trọng cần nhận ra là AI không cần ngân sách lớn hoặc thậm chí là cam kết thời gian lớn để thực hiện.</p>
-            <p>Đối với các doanh nghiệp vừa và nhỏ, AI có thể dễ dàng được tích hợp với việc sử dụng phần mềm hoặc ứng dụng của bên thứ ba. Mặc dù chúng tồn tại cho mọi khía cạnh của hoạt động kinh doanh, tiếp thị và bán hàng chắc chắn xứng đáng là trọng tâm chính của công ty – dù có ngân sách eo hẹp để thực hiện.</p>
-             <h2 class="mb-3 mt-5">4. Doanh nghiệp có nên đầu tư vào MarTech không?</h2>
+            <p>Các dịch vụ đám mây AI phổ biến bao gồm:</p>
+<p>– Amazon AI</p>
+<p>– Trợ lý IBM Watson</p>
+<p>– Dịch vụ nhận thức của Microsoft</p>
+<p>– Google AI</p>
+<h2 class="mb-3 mt-5">2. Lí do doanh nghiệp cần chuẩn bị cho việc sử dụng AI?</h2>
+            <p>Chuẩn bị cho việc sử dụng AI là yếu tố then chốt để cạnh tranh trong thị trường ngày nay. Các doanh nghiệp thường không nhận ra tầm quan trọng và khả năng ngày càng tăng của AI đang khiến họ có nguy cơ bị các đối thủ cạnh tranh vượt qua.</p>
+            <h2 class="mb-3 mt-5">3. Lợi ích AI mang lại cho nền tảng martech trong doanh nghiệp</h2>
+            <p><b>1.Cá nhân hóa</b></p>
+            <li><p>Cá nhân hóa rất quan trọng khi bạn muốn mang lại trải nghiệm tốt nhất cho khách hàng, cải thiện mức độ tương tác để biến khách hàng tiềm năng trở thành khách hàng thân thiết.</p></li>
+<li><p>Cá nhân hóa kết hợp với AI có thể giúp bạn tận dụng tối đa tất cả dữ liệu bạn đang thu thập. </p></li>
+<p>Ví dụ: AI có thể giúp bạn phân tích dữ liệu từ khách hàng truy cập trang web để điều chỉnh thông điệp của bạn dựa trên sở thích và thói quen của họ. Nó cũng có thể giúp bạn cải thiện phân đoạn để gửi đúng thông điệp vào đúng thời điểm.</p>
+<li><p>AI không chỉ thu thập và hiểu dữ liệu. Nó hiểu hành vi con người  và làm thế nào để các hành động tiếp theo có thể ảnh hưởng đến quyết định mua hàng của khách hàng.</p></li>
+<p><b>2. Phân tích khách hàng</b></p>
+            <li><p>Cách tốt nhất để duy trì và phát triển đó là lắng nghe khách hàng và hiểu họ muốn gì ở bạn. Bạn cần biết họ nghĩ gì về thương hiệu của mình cũng như diễn giải các đánh giá, phản hồi của họ.</p></li>
+<li><p>Tất cả bài đăng, nhận xét, đánh giá trên mạng xã hội đều có thể đóng góp vào quá trình phân tích tổng thể. AI giúp bạn lọc tất cả các phản hồi để sắp xếp ngăn nắp chủ đề bạn tập trung vào.</p></li>
+<li><p>Ai giúp bạn tiết kiệm thời gian, đồng thời khám phá những thông tin chi tiết mà có thể bạn đã bỏ lỡ trong quá khứ. Những dữ liệu đó có thể là một lợi thế đáng kể để điều chỉnh chiến thuật dựa trên những phát hiện của bạn.</p></li>
+<p><b>3. Tiết kiệm chi phí khi tích hợp các công cụ martech</b></p>
+            <li><p>Một thách thức khi quản lý martech là quy trình quản lý các tích hợp và liệu các công cụ có thể hoạt động cùng nhau hay không. Khi thêm các công cụ mới vào martech, điều quan trọng là phải khám phá cách chúng có thể hoạt động cùng với ngăn xếp hiện có của bạn.</p></li>
+<p>Ví dụ: CRM và học máy có thể giúp bạn tiết kiệm tiền và tài nguyên miễn là chúng được tích hợp.</p>
+<li><p>Thay vì xem xét các công cụ khác nhau, bạn có thể xây dựng tổng quan toàn diện về trải nghiệm khách hàng. Quản lý mối quan hệ có thể dễ dàng hơn khi kết hợp tự động, phân tích dự đoán và phân đoạn có thể cải thiện trải nghiệm của khách hàng.</p></li>
+<p><b>4. Tối ưu hóa chi tiêu quảng cáo</b></p>
+            <p>AI có thể giúp bạn mở rộng nỗ lực quảng cáo của mình. Nó có thể giúp bạn đánh giả khả năng của các nhà cung cấp khác nhau. Nó cũng có thể phân tích dữ liệu người tiêu dùng theo thời gian thực để cải thiện kết quả đặt giá thầu của bạn. Chúng tạo ra xu thế tất yếu của thời đại công nghệ số, làm thay đổi cách thức truyền đạt và nội dung tạo nên quảng cáo.</p>
+             <p><b>5. Sử dụng AI như bước đầu tiên để chuyển đổi doanh nghiệp</b></p>
             <p class="mb-5">
             <img src="images/12404_MarTech.jpg" alt="" class="img-fluid">
             </p>
-            <p>Một doanh nghiệp chọn chuẩn bị cho việc tiếp tục sử dụng AI sẽ cần bắt đầu nghiên cứu những cải tiến và xu hướng mới nhất để luôn biết, nhưng hơn thế nữa, nó cũng sẽ cần bắt đầu xem xét việc triển khai AI có thể giúp tăng tốc như thế nào lên các quy trình riêng của mình, chi phí thấp hơn và tối ưu hóa khối lượng công việc của nó.</p>
-<p>Khi làm như vậy, doanh nghiệp sẽ có thể bắt đầu triển khai AI ở quy mô nhỏ nhất để có thể bắt đầu thử nghiệm các khả năng mạnh mẽ của AI và giành được chỗ đứng trước các đối thủ cạnh tranh. Quá trình này nên bắt đầu ngay hôm nay, bắt đầu bằng nghiên cứu về các ứng dụng tiếp thị và bán hàng sử dụng AI.</p>
-<p>Hiệu quả của những nỗ lực này chắc chắn sẽ được hiện thực hóa trong tương lai gần, và hơn thế nữa, khi AI tiếp tục tiến lên.</p>
-<p>Nhìn chung, khi thị trường ngày càng trở nên số hóa, nhu cầu khách hàng ngày càng trở nên đa dạng, và khó nắm bắt hơn bao giờ hết, thì việc vận dụng nền tảng MarTech vào môi trường kinh doanh sẽ giúp doanh nghiệp tiếp cận tốt hơn với nguồn dữ liệu Big Data vô tận, góp phần tạo ra lợi thế cạnh tranh khác biệt so với đối thủ.</p>
-<p>Có một điều chắc chắn rằng MarTech đã và đang trở thành một định hướng được đa số doanh nghiệp trên thị trường hướng đến, và đã đến lúc những nhà quản trị, những người làm truyền thông cần trang bị cho bản thân kiến thức sâu rộng về MarTech để có thể nắm bắt và vận dụng tối đa những ưu điểm vượt trội mà MarTech đem lại.</p>
-<p><i>Nguồn: martechtoday.vn</i></p>
+            <p>Thêm AI vào công nghệ tiếp thị sẽ giúp bạn nhìn thị trường với một bức tranh toàn cảnh hơn. Nó không chỉ là việc thêm một chatbot vào dịch vụ khách hàng hoặc tích hợp học máy. Điều quan trọng là AI như một giải pháp hữu hiệu cho các vấn đề hiện tại của doanh nghiệp. Bất chấp những thách thức, việc có thêm sự trợ giúp vượt ra ngoài tầm nhìn của con người sẽ mang lại nhiều lợi ích vô giá.</p>
+<h2 class="mb-3 mt-5">3. Giai đoạn tiếp theo của AI trong Martech</h2>
+<p>AI vẫn đang ở giai đoạn đầu so với tiềm năng của nó. Đó là lý do tại sao đây là thời điểm hoàn hảo để bạn có thể tích hợp nó vào chiến lược hiện tại của mình.</p>
+<p>Theo McKinsey & Company, sẽ có một khoảng cách lớn vào năm 2030 giữa những người đang áp dụng đầy đủ các công nghệ AI và những người vẫn đi sau. Cụ thể hơn, những người dẫn đầu về AI có khả năng tăng gấp đôi dòng tiền của họ lên 20% vào năm 2020.</p>
+<p>NDo đó, hiện tại là lúc tập hợp các công cụ và chiến thuật để giúp bạn duy trì lợi thế cạnh tranh của mình trong vài năm tới!</p>
         <div class="tag-widget post-tag-container mb-5 mt-5">
                <div class="tagcloud">
                   <a href="#" class="tag-cloud-link">MarTech</a>
