--- a/CRM-la-gi.html
+++ b/CRM-la-gi.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>MarTech Zone Blog - Hiểu về quản lý quan hệ khách hàng (CRM)</title>
+    <title>Hiểu về quản lý quan hệ khách hàng (CRM)</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -62,17 +62,18 @@
           <div class="col-lg-8 ftco-animate">
             <h2 class="mb-3 mt-5">1. Giới thiệu</h2>
             <p>Một khách đi vào Cung điện Caesar của Harrah ở Las Vegas. Một người hầu vui vẻ chào đón cô ấy bằng tên và hộ tống cô ấy vào phòng trò chơi, đi vòng quanh sảnh đợi đông đúc. Ngay sau đó, một máy chủ được chỉ định sẽ tiếp cận cô ấy và đảm bảo rằng dịch vụ mà cô ấy đang nhận được phù hợp với mong đợi của cô ấy. Sau khi chơi game, cô ấy được đưa vào nhà hàng đến bàn ưa thích của mình với loại rượu yêu thích đang chờ cô ấy. Dịch vụ khách hàng cao cấp này là một ví dụ về việc Harrah đang xây dựng các mối quan hệ cá nhân với những khách hàng có giá trị cao như một phương tiện để tận hưởng sự bảo trợ liên tục của họ. Xem xét sự hài lòng đối với khách hàng và hoạt động kinh doanh lặp lại sau đó sẽ tạo ra cho Harrah's, đó là một tình huống đôi bên cùng có lợi cho cả công ty và khách hàng, và một tình huống thường dẫn đến truyền miệng và giới thiệu tích cực cho công ty. Kỹ thuật phát triển mối quan hệ 1-1 với khách hàng được gọi là quản lý quan hệ khách hàng (CRM). Trong khi ví dụ trên minh họa trải nghiệm khách hàng (xem phần Suy nghĩ sâu hơn về Trải nghiệm khách hàng) trong môi trường từ doanh nghiệp đến người tiêu dùng (B2C), các biện pháp thích hợp có thể được áp dụng để quản lý mối quan hệ với các nhà cung cấp trong môi trường kinh doanh giữa doanh nghiệp với doanh nghiệp (B2B).
+
 </p>
 
 <h2 class="mb-3 mt-5">2. CRM là gì?</h2>
 
-<p>Ví dụ trên minh họa sức mạnh của tiếp thị cơ sở dữ liệu (xem Khai thác và tiếp thị cơ sở dữ liệu) và cách nó có thể được khai thác để xác định và phân tích các phân khúc khách hàng để có thông tin có giá trị có thể được sử dụng để tăng tác động của các chiến dịch tiếp thị cho công ty. Hơn nữa, với những tiến bộ trong công nghệ, giờ đây có thể thu thập dữ liệu khách hàng và tương tác với khách hàng đồng thời, như Harrah's đã chứng minh. Do đó, CRM mở rộng khái niệm tiếp thị cơ sở dữ liệu đến cấp độ khách hàng để phát triển các mối quan hệ từ công ty đến khách hàng có lợi nhuận. Sau đó, khái niệm CRM có thể được sử dụng để tạo ra các chiến lược tương tác với từng khách hàng. Ví dụ về các chiến lược như vậy bao gồm phát triển mối quan hệ tốt hơn với những khách hàng có lợi nhuận, xác định vị trí và lôi kéo những khách hàng mới sẽ sinh lời và tìm ra những chiến lược phù hợp cho những khách hàng không có lợi nhuận, trong số những chiến lược khác.</p>
+<p>Ví dụ trên minh họa sức mạnh của tiếp thị cơ sở dữ liệu và cách nó có thể được khai thác để xác định và phân tích các phân khúc khách hàng để có thông tin có giá trị có thể được sử dụng để tăng tác động của các chiến dịch tiếp thị cho công ty. Hơn nữa, với những tiến bộ trong công nghệ, giờ đây có thể thu thập dữ liệu khách hàng và tương tác với khách hàng đồng thời, như Harrah's đã chứng minh. Do đó, CRM mở rộng khái niệm tiếp thị cơ sở dữ liệu đến cấp độ khách hàng để phát triển các mối quan hệ từ công ty đến khách hàng có lợi nhuận. Sau đó, khái niệm CRM có thể được sử dụng để tạo ra các chiến lược tương tác với từng khách hàng. Ví dụ về các chiến lược như vậy bao gồm phát triển mối quan hệ tốt hơn với những khách hàng có lợi nhuận, xác định vị trí và lôi kéo những khách hàng mới sẽ sinh lời và tìm ra những chiến lược phù hợp cho những khách hàng không có lợi nhuận, trong số những chiến lược khác.</p>
 <p>Với điều này làm nền tảng, bây giờ chúng ta có thể nhìn CRM từ góc độ chiến lược kinh doanh. Bằng cách áp dụng cách tiếp cận như vậy, các công ty có thể đạt được lợi thế cạnh tranh lâu dài bằng cách cung cấp giá trị và sự hài lòng một cách tối ưu (xem Sự hài lòng / Không hài lòng của khách hàng) cho khách hàng và chiết xuất giá trị kinh doanh từ việc trao đổi. Kumar và Reinartz 2006 định nghĩa CRM như sau:</p>
 <p> “ Quản lý quan hệ khách hàng (CRM) là sự kết hợp của con người, quy trình và công nghệ nhằm tìm hiểu khách hàng của công ty. Đó là một cách tiếp cận tổng hợp để quản lý các mối quan hệ bằng cách tập trung vào việc giữ chân khách hàng và phát triển mối quan hệ.”</p>
 <p class="mb-5">
               <img src="images/crm-la-gi.jpg" alt="" class="img-fluid">
             </p>
-            <h4 class="mb-3 mt-5">Các thành phần chính của định nghĩa này bao gồm:</h4>
+            <h4 class="mb-3 mt-5"><i>Các thành phần chính của định nghĩa này bao gồm:</i></h4>
             <li><p>Quy trình chiến lược</p></li>
             <p>Điều này có nghĩa là các hoạt động CRM được khởi xướng và quản lý bắt đầu từ cấp cao nhất của tổ chức. CRM không thuộc về bất kỳ bộ phận đơn lẻ nào mà cần sự đóng góp và hỗ trợ từ tất cả các bộ phận của công ty. Hơn nữa, CRM là một quá trình liên tục không thể được xử lý như một dự án triển khai phần mềm khác. Nó phải được xem như một nỗ lực không ngừng với mục tiêu của công ty trở nên tập trung hơn vào khách hàng.</p>
             <li><p>Lựa chọn</p></li>
@@ -83,9 +84,9 @@
             <p>Tùy thuộc vào ngành và công ty, khách hàng có thể là một tài khoản cá nhân, một hoặc một số phân khúc trong một thị trường hoặc toàn bộ thị trường. Ngoài ra, khách hàng không chỉ bao gồm người dùng cuối mà còn bao gồm những người trung gian, như nhà phân phối, nhà bán lẻ, v.v.</p>
             <li><p>Giá trị hiện tại và tương lai của khách hàng</p></li>
             <p>Điều này có nghĩa là các công ty đang chuyển từ việc trích lợi nhuận từ các giao dịch đơn lẻ sang tối đa hóa lợi nhuận qua một loạt các giao dịch. Do đó, các công ty đang bắt đầu tối đa hóa Quyền sở hữu khách hàng - tức là giá trị của tất cả các mối quan hệ khách hàng của họ đối với họ.</p>
-            <h2 class="mb-3 mt-5">3. chương trình khách hàng thân thiết</h2>
+            <h2 class="mb-3 mt-5">3. Chương trình khách hàng thân thiết</h2>
             <p>Các công ty từ lâu đã sử dụng các chương trình khách hàng thân thiết nhằm nỗ lực đánh giá giá trị hiện tại và tương lai của khách hàng. Chương trình khách hàng thân thiết là một quy trình tiếp thị nhằm tạo ra phần thưởng cho khách hàng trên cơ sở họ mua hàng lặp lại. Những người tiêu dùng tham gia chương trình khách hàng thân thiết chọn tập trung nhiều hơn vào việc mua hàng của họ với một công ty cụ thể, do đó từ bỏ lựa chọn miễn phí mà họ có. Để đổi lấy việc tập trung mua hàng với công ty, họ tích lũy tài sản (ví dụ: “điểm”) để đổi lấy sản phẩm và dịch vụ, thường được liên kết với công ty đầu mối.</p>
-<h2 class="mb-3 mt-5">4. thước đo để đo lường và quản lý mức độ trung thành của khách hàng</h2>
+<h2 class="mb-3 mt-5">4. Thước đo để đo lường và quản lý mức độ trung thành của khách hàng</h2>
             <p>Theo truyền thống, các số liệu khác nhau (xem Số liệu Tiếp thị) đã được sử dụng để đo lường và quản lý lòng trung thành của khách hàng được dự đoán là các chỉ số hợp lý về giá trị thực tế của khách hàng. Các chỉ số này giúp các công ty ưu tiên khách hàng của họ theo cách cho phép phân bổ tỷ lệ nguồn lực cao hơn cho những khách hàng được kỳ vọng sẽ tạo ra lợi nhuận lớn hơn trong tương lai. Sau đây là một số chỉ số phổ biến được sử dụng:</p>
             <li><p>Lần truy cập gần đây, tần suất và giá trị tiền tệ (RFM)</p></li>
             <p>Lần truy cập gần đây đề cập đến khoảng thời gian kể từ lần cuối cùng khách hàng đặt hàng với công ty, tần suất đề cập đến tần suất khách hàng đặt hàng từ công ty trong một khoảng thời gian xác định nhất định và giá trị tiền tệ biểu thị số tiền mà khách hàng chi tiêu cho một giao dịch trung bình. Điểm tính toán càng cao, khách hàng càng có nhiều khả năng sinh lợi trong tương lai.</p>
