--- a/Data-Driven-Marketing.html
+++ b/Data-Driven-Marketing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>MarTech Zone Blog - Data driven là gì? Xu hướng data-driven marketing và tự động hóa tiếp thị</title>
+    <title>Tại sao tiếp thị theo hướng dữ liệu lại quan trọng?</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -49,8 +49,8 @@
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
           <div class="col-md-9 ftco-animate pb-5 text-center">
-            <h2 class="mb-3 bread">Data driven là gì? Xu hướng data-driven marketing và tự động hóa tiếp thị</h2>
-            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="ion-ios-arrow-forward"></i></a></span> <span>Data driven là gì? Xu hướng data-driven marketing và tự động hóa tiếp thị<i class="ion-ios-arrow-forward"></i></span></p>
+            <h2 class="mb-3 bread">Tại sao tiếp thị theo hướng dữ liệu lại quan trọng?</h2>
+            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="ion-ios-arrow-forward"></i></a></span> <span>Tại sao tiếp thị theo hướng dữ liệu lại quan trọng?<i class="ion-ios-arrow-forward"></i></span></p>
           </div>
         </div>
       </div>
@@ -60,47 +60,21 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 ftco-animate">
-            <p>Kinh doanh là một lĩnh vực có tính cạnh tranh cao đòi hỏi người kinh doanh phải thường xuyên cập nhật xu hướng và thị hiếu của người tiêu dùng. Cùng với sự phát triển của digital marketing, thuật ngữ Data driven cũng trở nên phổ biến và được các doanh nghiệp ứng dụng trong hoạch định chiến lược. Vậy data driven là gì và tầm quan trọng của data driven như thế nào trong chiến lược kinh doanh?</p>
-            <h2 class="mb-3 mt-5">Data driven là gì?</h2>
+            <p>Không nghi ngờ gì khi mọi người có những sở thích hướng dẫn suy nghĩ và hành vi của họ. Một công ty phục vụ những ưu đãi đó có cơ hội tốt hơn nhiều để chuyển đổi khách hàng tiềm năng thành khách hàng trả tiền.</p>
 
-<p>Data driven là một thuật ngữ tiếng Anh, được dịch nghĩa là điều khiển bằng dữ liệu, thuật ngữ này thường được dùng trong lĩnh vực kinh doanh và tiếp thị. Data driven tức là phương thức kinh doanh dựa trên cơ sở dữ liệu thu thập và phân tích được. Có thể nói, trong thời đại công nghệ 4.0 với sự phát triển của digital marketing, phân tích dữ liệu giờ đây đã thành một phần cơ bản của chiến lược quảng cáo và kinh doanh.</p>
-<p>Các dữ liệu này bao gồm thông tin, tương tác và hành vi mua hàng của khách hàng, việc phân tích dữ liệu sẽ dự đoán được hành vi mua sắm của khách hàng trong tương lai.Data driven bao gồm sử dụng dữ liệu sẵn có, thu thập dữ liệu, phân tích, xử lý dữ liệu và áp dụng dữ liệu đó cho chiến lược quảng cáo, tiếp thị và kinh doanh của bạn.</p>
+<p>Ví dụ: Một công ty cắt cỏ gửi bưu thiếp tìm kiếm khách hàng mới đến toàn bộ khu vực tàu điện ngầm nhưng nhận được ít hơn 1% phản hồi. Ít hơn 5% trong số đó trở thành khách hàng mới. Quyết định rằng tiếp thị theo hướng dữ liệu có thể cải thiện những kết quả đó, công ty nghiên cứu nhân khẩu học và phát hiện ra một khu vực có thu nhập chủ nhà giảm từ 10% đến 30% so với thu nhập trung bình của khu vực thành phố lớn. Một chiến dịch bưu thiếp khác đến khu vực đó nhấn mạnh giá dịch vụ bãi cỏ thấp tạo ra số lượng khách hàng mới gấp sáu lần. Chiến dịch thứ hai đó sử dụng tiếp thị theo hướng dữ liệu để tập trung vào những gì chủ nhà ở khu vực đó cho là quan trọng nhất.</p>
+<p>Việc sử dụng phương pháp tiếp thị theo hướng dữ liệu như vậy có thể cung cấp cho các công ty một cái nhìn tổng thể về thói quen mua hàng của khách hàng. Với sự hiểu biết đó, doanh nghiệp có thể điều chỉnh chiến lược bán hàng và tiếp thị của mình cho những đối tượng khách hàng đó. Nguồn dữ liệu tiếp thị theo hướng dữ liệu có thể bao gồm thông tin cá nhân cơ bản như tuổi, mức thu nhập, tình trạng hôn nhân, số và tuổi của con cái, ngày sinh nhật và các thông tin nhân khẩu học khác.</p>
 
-<h2 class="mb-3 mt-5">Data driven được hình thành và phát triển như thế nào?</h2>
-<p><b>Sự xuất hiện của phần mềm quản lý khách hàng (CRM)</b></p>
+<h2 class="mb-3 mt-5">Các nhà tiếp thị sử dụng dữ liệu để xác định mục tiêu như thế nào?</h2>
 
-<p>Data driven xuất phát từ việc phát minh ra phần mềm quản lý quan hệ khách hàng (CRM) cho phép các nhà tiếp thị theo dõi khách hàng cá nhân bao gồm tên và thông tin liên hệ.</p>
-<p>CRM cho phép gửi thư trực tiếp đến khách hàng và do đó nhà tiếp thị có thể thực hiện các chiến dịch tiếp thị trực tiếp bằng cách gửi các loại tin nhắn khác nhau đến từng phân khúc khách hàng khác nhau.</p>
+
+<p>Nói chung, mục tiêu cấp cao của tiếp thị là tạo ra khách hàng và cung cấp sản phẩm và dịch vụ có lợi nhuận. Tuy nhiên, mọi chiến dịch tiếp thị đều cần phải có mục tiêu. Đó có thể là mục tiêu doanh thu, số lượng đơn vị đã bán, số lượng khách hàng mới có được, v.v. Không đặt mục tiêu cho mỗi chiến dịch khiến bạn nghi ngờ về những gì mà chiến dịch thực sự đã đạt được.</p>
+<p>Các nhà tiếp thị có thể sử dụng thông tin chi tiết về tiếp thị theo hướng dữ liệu để thiết lập mục tiêu bằng cách khai thác các nguồn dữ liệu khác nhau. Ví dụ: trong thị trường B2C, chúng có thể bao gồm nhân khẩu học, tâm lý học, dữ liệu lớn từ phương tiện truyền thông xã hội, CES (điểm nỗ lực của khách hàng), NPS® (Điểm khuyến mại ròng) và những thứ khác. Nghiên cứu dữ liệu như vậy có thể tiết lộ các phân đoạn của tổng thể có sở thích, hành vi hoặc xu hướng tương tự. Hiểu được những điều đó sẽ giúp các nhà tiếp thị tinh chỉnh thông điệp và đề nghị của họ để phù hợp nhất với các phân khúc như vậy. Quá trình đó làm rõ việc thiết lập các mục tiêu.</p>
 <p class="mb-5">
               <img src="images/Data-Driven-Marketing.jpg" alt="" class="img-fluid">
             </p>
-<p><b>Thời đại tự động hóa tiếp thị thông qua đám mây</b></p>
-<p>CRM đã đạt được một bước tiến mới trong thời đại tiếp thị kỹ thuật số với sự đổi mới của Salesforce khi kết nối nền tảng này với đám mây.</p>
-<p>Tiếp thị dựa trên dữ liệu kỹ thuật số ra đời khi CRM khai sinh ra phần mềm tự động hóa tiếp thị. Hồ sơ tiếp thị cá nhân được xây dựng dựa trên việc theo dõi tương tác của khách hàng trên trang web và email. Từ đó, các email được gửi tự động dựa trên kết quả chấm điểm khách hàng tiềm năng trên từng phân khúc.</p>
-<p><b>Thời đại của marketing dựa trên nền tảng quản lý dữ liệu (data-driven)</b></p>
-<p>Khi các nhà tiếp thị bắt đầu tiến hành phân khúc khách hàng bằng cách sử dụng dữ liệu tiếp thị, họ gặp phải một vấn đề mới xung quanh lượng dữ liệu về người dùng được theo dõi đang được tích lũy.</p>
-<p>Khách hàng giờ đây không chỉ tiếp cận và tương tác với các chương trình tiếp thị thông qua website và email của công ty mà còn tiếp cận thông qua các phương tiện truyền thông khác nơi mà nhà tiếp thị đang đặt quảng cáo, gọi là quảng cáo thuật toán. Các giải pháp ví dụ như Krux và Neustar đã ra đời để giúp các nhà tiếp thị tổng hợp dữ liệu theo cách dễ quản lý hơn và tạo ra những hiểu biết về thị trường, khách hàng nhằm hoạch định các chính sách và chiến lược tiếp thị mới.</p>
-<p>Từ đó, bắt đầu thời đại của nền tảng quản lý dữ liệu và data-driven.</p>
-            <h2 class="mb-3 mt-5">Tầm quan trọng của data driven trong xây dựng chiến lược marketing</h2>
-            <p>Cả doanh nghiệp và người tiêu dùng đều được hưởng lợi từ việc tiếp cận dữ liệu để tiếp thị. Khi các chiến lược được thực hiện thành công, những lợi ích đó bao gồm:</p>
-
-<li><b>Tiếp thị cá nhân:</b>Nó giúp cho công ty truyền tải đúng thông điệp, đến đúng đối tượng, vào đúng thời điểm. Tiếp thị dựa trên dữ liệu cho phép các thương hiệu tạo ra một chiến dịch tùy chỉnh cho từng khách hàng tiềm năng thông qua sự hiểu biết sâu sắc hơn về hồ sơ và thông tin khách hàng.</li>
-<li><b>Dữ liệu rõ ràng:</b>Với vô số thông tin trong cơ sở dữ liệu của họ, các nhà tiếp thị có thể sàng lọc để xác định thông tin chính xác và hiệu quả nhất về khách hàng và khách hàng tiềm năng. Với cách tiếp cận dựa trên dữ liệu, việc phân tách các nhóm đối tượng mục tiêu mà bạn đang cố gắng tiếp cận sẽ trở nên dễ dàng hơn nhiều.</li>
-<li><b>Trải nghiệm đa kênh:</b>Các nhà tiếp thị có thể tận dụng dữ liệu để mở rộng phạm vi tiếp cận trên nhiều nền tảng. Dữ liệu cũng giúp nhà tiếp thị xác định được những kênh nào nên chạy chương trình quảng cáo thông qua các chiến dịch tiếp thị tự động. Điều đó đảm bảo rằng thông điệp của bạn nhất quán, phù hợp và tiếp cận từng khách hàng ở nơi hoàn hảo và vào thời điểm hoàn hảo nhất.</li>
-<li><b>Trải nghiệm khách hàng tinh tế:</b>Nhiều thương hiệu phổ biến sử dụng tiếp thị dựa trên dữ liệu để nâng cao trải nghiệm khách hàng của họ. Họ thường sẽ phối hợp các cuộc khảo sát sự hài lòng của khách hàng và xác định chính xác các đối tượng khách hàng cụ thể để cải thiện.</li>
-<li><b>Phát triển sản phẩm tốt hơn:</b>Tiếp thị dựa trên dữ liệu giúp tăng khả năng thành công của sản phẩm. Các công ty có thể thiết lập sự hiểu biết tốt hơn về đối tượng mục tiêu của họ, điều này dẫn đến việc phát triển các sản phẩm phù hợp hơn cho thị trường cụ thể đó.</li>
-<h2 class="mb-3 mt-5">Tương lai của tiếp thị đa kênh chính là tự động hóa thu thập và phân tích dữ liệu</h2>
-<p><b>Kỷ nguyên của ngành phân tích dữ liệu lớn (big data)</b></p>
-<p>Tiếp thị đa kênh cần một lượng dữ liệu khổng lồ làm cơ sở cho việc ra quyết định và hoạch định chiến lược. Việc tiếp cận, thu thập và phân tích lượng dữ liệu này dường như nằm ngoài tầm tay của các nhà tiếp thị. Chính vì vậy, họ cần một bên thứ 3 để cung cấp giải pháp tối ưu cho việc xử lý và phân tích dữ liệu này. Tiếp thị đa kênh đã hình thành nên một đế chế về data analytics mạnh mẽ. Bằng chứng rõ ràng nhất chính là việc các ông lớn về công nghệ đã lần lượt thâu tóm các giải pháp phân tích dữ liệu trong năm 2019, như thương vụ Google mua lại Looker analytics với giá 2.6 tỷ USD, và Salesforce mua lại Tableau với giá 15.7 tỷ USD thông qua hoán đổi cổ phần.</p>
-<p><b>Tự động hóa thu thập và phân tích dữ liệu</b></p>
-<p>Phần mềm thu thập dữ liệu tự động thu thập và sàng lọc nội dung, hành vi và hành động của khách hàng để cung cấp cho bạn thông tin chuyên sâu về khách hàng tiềm năng và các xu hướng về thị trường. Nó giúp bạn có hiểu biết tốt hơn về khách hàng, từ đó thiết kế các chiến dịch tiếp thị tốt hơn.</p>
-<p>Analytics cũng có thể giúp bạn thấy được mức độ thành công của các chiến dịch của mình trong thời gian thực. Bạn có thể biết được có bao nhiêu người đang click chuột vào nội dung của bạn, thời gian họ ở lại và kênh nào có nhiều lưu lượng truy cập nhất. Bạn cũng có thể tìm hiểu nhóm khách hàng nào phản hồi chiến dịch của bạn nhiều nhất, giúp bạn khám phá phân khúc khách hàng mà bạn nên tập trung vào.</p>
-<p><b>Tự động hóa tiếp thị</b></p>
-<p>“Tự động hóa tiếp thị phát triển trên nền tảng quản lý quan hệ khách hàng (CRM) và quản lý trải nghiệm khách hàng (CXM) tập trung vào các mô tả, phân khúc, lên kế hoạch, thực hiện và theo dõi các chiến dịch tiếp thị. Tự động hóa tiếp thị tức là quá trình lặp đi lặp lại các nhiệm vụ tiếp thị nêu trên một cách tự động trong suốt chiến dịch tiếp thị.</p>
-<p>Một ví dụ cho tự động hóa tiếp thị chính là việc Doanh nghiệp đã ứng dụng tự động hóa tiếp thị như thế nào trong việc tạo ra tăng trưởng cho doanh nghiệp mình:</p>
-<p>Grab là một ứng dụng gọi xe phổ biến ở Việt Nam, và mặc dù mảng gọi xe công nghệ có sự cạnh tranh rất lớn khi có sự tham gia của các công ty lớn nhỏ như Go-Việt, Be, My Go…nhưng Grab vẫn là ứng dụng hàng đầu nhờ ứng dụng Data Analytics và tự động hóa tiếp thị trong chiến lược kinh doanh của mình. Giải pháp này được cung cấp bởi một startup của Việt Nam có tên là Holistics.</p>
-<p>Qua bài viết này, chúng ta đã tìm hiểu được data driven là gì và xu hướng data driven marketing trong giai đoạn hiện nay. Có thể nói, hình thức quảng cáo hàng loạt trên website và các phương tiện truyền thông đã trở nên bão hòa. Đã đến lúc marketing hướng tới tối ưu hóa trải nghiệm của khách hàng theo lối tiếp thị cá nhân. Đây chính là giải pháp nâng cao hiệu quả  cạnh tranh và tăng trưởng doanh số của các doanh nghiệp trong thời gian tới.</p>
-<p><i>Nguồn: jobpro.vn</i></p>
+<p>Ví dụ: bạn có thể đặt mục tiêu chiến dịch để tìm ra ba giải thích chính khiến khách hàng có thái độ tiêu cực đối với công ty hoặc sản phẩm của công ty. Bạn có thể chọn liên hệ với đối tượng mục tiêu bao gồm những người đã hoàn thành cuộc khảo sát Điểm số người thăng tiến ròng là “kẻ gièm pha” hoặc “kẻ bịp bợm” - nghĩa là từ những người không có thiện cảm với công ty hoặc sản phẩm của công ty. Có dữ liệu về khách hàng như vậy cho phép các nhà tiếp thị xác định các chiến dịch mà họ không có cách nào thực hiện.</p>
+<p>Về cơ bản, tiếp thị theo hướng dữ liệu mở rộng dựa trên triết lý tiếp thị 25 năm tuổi lần đầu tiên được nói ra bởi Don Peppers và Martha Rogers; triết lý tiếp thị cá nhân hóa, “một đối một” sau đó mang tính cách mạng của họ. Việc tập trung vào từng khách hàng tiềm năng và khách hàng bằng cách sử dụng tiếp thị theo hướng dữ liệu đã nâng khái niệm 1-1 lên một tầm cao mới vốn phải chờ công nghệ phát triển. Khi các công cụ tận dụng AI để kết hợp và phân tích các nguồn dữ liệu khác nhau, như Demand Jump, được áp dụng rộng rãi hơn, bạn có thể mong đợi tiếp thị theo hướng dữ liệu sẽ trở thành tiêu chuẩn trên tất cả các ngành.</p>
             <div class="tag-widget post-tag-container mb-5 mt-5">
                <div class="tagcloud">
                   <a href="#" class="tag-cloud-link">MarTech</a>
