--- a/Marketing-Automation-2020.html
+++ b/Marketing-Automation-2020.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>MarTech Zone Blog - Marketing Automation năm 2020</title>
+    <title>Marketing Automation năm 2020</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -60,23 +60,22 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 ftco-animate">
-            <p>Truyền thông và tiếp thị có mối liên kết rất chặt chẽ. Ngày nay, tự động hóa tiếp thị có thể hỗ trợ các chiến dịch, giúp xác định khách hàng tiềm năng, giúp người mua đưa ra quyết định mua hàng dễ dàng và nhiều hơn thế nữa. Xét về toàn cảnh, tự động hóa tiếp thị đã chứng kiến ​​một sự tiến hóa rất lớn.</p>
+            <p>Chúng ta đều biết tiếp thị và truyền thông ngày nay có mối liên kết rất chặt chẽ. Tự động hóa tiếp thị có thể hỗ trợ các chiến dịch từ đó giúp xác định khách hàng tiềm năng và nhiều hơn thế nữa. Xét về toàn cảnh, tự động hóa tiếp thị đã có một bước tiến rất lớn.</p>
 
-<p>Thị trường phần mềm tự động hóa tiếp thị toàn cầu được dự đoán sẽ tăng trưởng với tốc độ CAGR là 9,26% vào năm 2022. Thị trường đã tạo ra doanh thu 3,86 tỷ đô la trong năm 2016 và dự kiến ​​đạt tới 7,63 tỷ đô la vào năm 2025. Nếu bạn chỉ xem xét số lượng các nhà cung cấp trong khu vực MarTech, nó đã đi từ khoảng 150 năm 2011 lên hơn 5000 vào năm 2017.</p>
+<p>Thị trường phần mềm tự động hóa tiếp thị toàn cầu được dự đoán sẽ tăng trưởng với tốc độ CAGR là 9,26% vào năm 2022. Thị trường dự kiến ​​đạt tới 7,63 tỷ đô la vào năm 2025.</p>
 <p class="mb-5">
               <img src="images/1.jpg" alt="" class="img-fluid">
             </p>
-<h2 class="mb-3 mt-5">Bản chất của tự động hóa tiếp thị đang phát triển</h2>
+<h2 class="mb-3 mt-5">Tự động hóa tiếp thị đang phát triển</h2>
 
-<p>Từ chiến lược kỹ thuật số một chiều, tự động hóa tiếp thị đã phát triển thành hệ thống cá nhân hóa dựa trên quy tắc hoặc linh hoạt hơn (nếu khách hàng tiềm năng tải xuống eBook thì hệ thống sẽ gửi email này, nếu khách truy cập một trang web hoặc link nào đó hệ thống bắt đầu nhắm mục tiêu lại và tiếp tục) đến hình thức hiện tại của nó, đó là những hoạt động để phù hợp với từng hành trình khách hàng cá nhân.</p>
+<p>Từ chiến lược kỹ thuật số một chiều, tự động hóa tiếp thị đã phát triển thành hệ thống cá nhân hóa dựa trên quy tắc hoặc linh hoạt hơn. Ví dụ khách hàng tiềm năng tải xuống eBook thì hệ thống sẽ gửi email này cho khách. Nếu khách truy cập một trang web hoặc link nào đó thì hệ thống bắt đầu nhắm mục tiêu lại và tiếp tục marketing.</p>
 <p>Ngày nay, tự động hóa tiếp thị không chỉ giải quyết hành trình mua hàng mà còn là toàn bộ trải nghiệm của khách hàng một cách có chiến lược.</p>
-<p>Điều trớ trêu là khi khách hàng ở mọi tầng lớp xã hội đều sử dụng công nghệ để làm việc, giải trí và đặc biệt là trong việc mua sắm trực tuyến ngày càng nhiều hơn thì kỳ vọng của họ từ các thương hiệu đối với trải nghiệm thương hiệu có xác thực và được cá nhân hóa cũng ngày càng tăng. Họ hy vọng các thương hiệu biết họ và cung cấp kiến ​​thức đó thông qua các thông điệp và tương tác với họ vào đúng thời điểm. [Gartner Research đã dự đoán rằng vào năm 2020, khách hàng sẽ quản lý 85% mối quan hệ của họ mà không cần nói chuyện với con người.] Hãy nhớ rằng, mặc dù máy móc đang thực hiện nhiều công việc thay con người hàng ngày nhưng trải nghiệm vẫn phải đem lại cảm giác chân thực như cách con người với con người tương tác với nhau.</p>
+<p>Tuy nhiên, khi khách hàng ở mọi tầng lớp xã hội đều sử dụng công nghệ để làm việc, giải trí và đặc biệt là trong việc mua sắm online ngày càng nhiều hơn thì kỳ vọng của họ từ các thương hiệu đối với trải nghiệm thương hiệu có xác thực và được cá nhân hóa cũng ngày càng tăng. Họ hy vọng các thương hiệu biết đến họ và cung cấp kiến ​​thức đó thông qua các thông điệp và tương tác với họ vào đúng thời điểm. [Gartner Research đã dự đoán rằng vào năm 2020, khách hàng sẽ quản lý 85% mối quan hệ của họ mà không cần nói chuyện với con người.] Hãy nhớ rằng, mặc dù máy móc đang thực hiện nhiều công việc thay con người hàng ngày nhưng trải nghiệm vẫn phải đem lại cảm giác chân thực như cách con người với con người tương tác với nhau.</p>
 <h2 class="mb-3 mt-5">Phạm vi tự động hóa tiếp thị đang phát triển</h2>
 <p>Phạm vi tự động hóa tiếp thị đã phát triển vượt xa rất nhiều, không chỉ để dẫn dắt nuôi dưỡng khách hàng tiềm năng nữa mà còn làm luôn việc chuyển đổi/chốt sale.</p>
-<h2 class="mb-3 mt-5">Các Marketer cũng cần phải phát triển</h2>
-<p>Cùng với việc tự động hóa, các nhà tiếp thị – là người dùng công nghệ cần phải phát triển. Các nhà cung cấp cần phải đẩy mạnh và hướng dẫn người dùng liên tục về các sản phẩm mà họ có. Có thể là tạo ra các giao diện thân thiện với người sử dụng, các trình trợ giúp và chương trình hỗ trợ cho các nhà tiếp thị sử dụng công nghệ một cách tối ưu…</p>
+<h2 class="mb-3 mt-5">Cùng với việc tự động hóa, các nhà tiếp thị – là người dùng công nghệ cần phải phát triển. Các nhà cung cấp cần phải đẩy mạnh và hướng dẫn người dùng liên tục về các sản phẩm mà họ có. Có thể là tạo ra các giao diện thân thiện với người sử dụng, các trình trợ giúp và chương trình hỗ trợ cho các nhà tiếp thị sử dụng công nghệ một cách tối ưu…</p>
 <h2 class="mb-3 mt-5">4 xu hướng Marketing Automation dẫn đầu 2020</h2>
-<p>Nếu bạn muốn tận dụng tối đa khả năng tự động hóa trong các chiến dịch marketing, hãy nắm bắt các xu hướng Marketing Automation dẫn đầu để không bỏ lỡ hơi thở của thời đại. Chẳng nhẽ đối thủ đã đi máy bay mà bạn vẫn đi bộ???</p>
+<p>Nếu bạn muốn tận dụng tối đa khả năng tự động hóa trong các chiến dịch marketing, hãy nắm bắt các xu hướng Marketing Automation dẫn đầu để không bỏ lỡ hơi thở của thời đại. Chẳng nhẽ đối thủ đã đi máy bay mà bạn vẫn đi bộ?</p>
 <h3 class="mb-3 mt-5">1. Trí tuệ nhân tạo AI</h3>
 <p class="mb-5">
               <img src="images/2.jpg" alt="" class="img-fluid">
