--- a/Ngan-xep-cong-nghe-MarTech-Stack.html
+++ b/Ngan-xep-cong-nghe-MarTech-Stack.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <title>MarTech Zone Blog - MarTech Stack là gì và làm cách nào để xây dựng một ngăn xếp công nghệ?</title>
+      <title>MarTech Stack ( ngăn xếp công nghệ ) là gì?</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
@@ -41,8 +41,8 @@
          <div class="container">
             <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
                <div class="col-md-9 ftco-animate pb-5 text-center">
-                  <h2 class="mb-3 bread">MarTech Stack là gì và làm cách nào để xây dựng một ngăn xếp công nghệ?</h2>
-                  <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="ion-ios-arrow-forward"></i></a></span> <span>MarTech Stack là gì và làm cách nào để xây dựng một ngăn xếp công nghệ?<i class="ion-ios-arrow-forward"></i></span></p>
+                  <h1 class="mb-3 bread">MarTech Stack ( ngăn xếp công nghệ ) là gì?</h1>
+                  <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="ion-ios-arrow-forward"></i></a></span> <span>MarTech Stack ( ngăn xếp công nghệ ) là gì?<i class="ion-ios-arrow-forward"></i></span></p>
                </div>
             </div>
          </div>
@@ -54,41 +54,19 @@
             <p class="mb-5">
                <img src="images/ngan-xep-stack.jpg" alt="" class="img-fluid">
             </p>
-            <p>Thuật ngữ 'ngăn xếp' đã được sử dụng trong ngành công nghệ trong nhiều thập kỷ. Từng được sử dụng chủ yếu trong lập trình và phần cứng máy tính, ngăn xếp đã trở nên phổ biến hơn rất nhiều trong việc sử dụng hàng ngày để tiếp thị và nó hoạt động trên cơ sở các công cụ được xây dựng cùng nhau và chạy cùng nhau trong một quy trình 'giống như ngăn xếp'. Các ứng dụng và phần mềm sẽ chạy trên hoặc trên các phần tử khác trong ngăn xếp và nhiều phần tử sẽ phụ thuộc lẫn nhau.</p>
-            <p>Ngăn xếp MarTech của doanh nghiệp bạn sẽ tập hợp mọi thứ bạn cần để thành công trong hoạt động tiếp thị với công nghệ phù hợp tại chỗ. Các loại ngăn xếp phổ biến mà hầu hết các doanh nghiệp sử dụng được xây dựng bằng sự kết hợp của các công nghệ và phần mềm khác nhau, mặc dù một số người chọn cách phân biệt giữa phần mềm và công nghệ theo những cách sau:</p>
-            <p>Phần mềm ngăn xếp là các gói phần mềm cần thiết cho phần phụ trợ của một trang web hoạt động thành công. Ngăn xếp phần mềm có thể vươn xa và mở rộng từ các yếu tố như hệ điều hành đến các ứng dụng cụ thể được chọn để hợp lý hóa các quy trình và nâng cao kết quả.</p>
-            <p>Các ngăn xếp công nghệ thường phức tạp hơn và dựa trên cơ sở hạ tầng nhiều hơn, được thiết kế để đảm bảo phần phụ trợ của bất kỳ hệ thống máy tính, máy chủ hoặc mạng nhất định nào.
-               Công nghệ tiếp thị, hay MarTech, mang ý tưởng về ngăn xếp đến một loại công nghệ và đối tượng mới. Ngăn xếp MarTech của bạn được thiết kế để giúp các nỗ lực tiếp thị của bạn hiệu quả hơn, hiệu quả hơn và phù hợp với doanh nghiệp của bạn.
-            </p>
-            <p>Tại một số doanh nghiệp MarTech được triển khai dưới dạng các tầng công nghệ khác nhau, trong đó các công cụ hoạt động song song, phối hợp cùng nhau thực hiện mục tiêu tiếp thị được đề ra một cách tự động. Dưới đây là một mô hình tầng công nghệ MarTech điển hình:</p>
-            <h2 class="mb-3 mt-5">Định nghĩa MarTech Stack</h2>
-            <p>Theo thuật ngữ cơ bản nhất, MarTech Stack của bất kỳ doanh nghiệp nào là một tập hợp các công cụ được chọn để làm cho các hoạt động và quy trình tiếp thị trở nên hiệu quả và hiệu quả hơn. Các công cụ có thể kết hợp nền tảng SaaS, công cụ truyền thông xã hội, hệ thống quản lý nội dung, công cụ phân tích và nhiều loại khác, tùy thuộc vào doanh nghiệp được đề cập.</p>
-            <p>Tùy thuộc vào quy mô và nhu cầu của bất kỳ doanh nghiệp cá nhân nào, nền tảng tiếp thị sẽ thay đổi. Nhiều công cụ có thể cần thiết và có thể đưa vào các bộ phận khác nhau nếu cần thiết để đảm bảo hoạt động trơn tru, hiệu quả ở mọi cấp độ của bất kỳ chiến dịch hoặc hợp đồng nhất định nào.</p>
-            <p>Một chỉ báo tốt về mức độ quan trọng của công nghệ đối với hoạt động tiếp thị là dự báo của Gartner rằng trong 5 năm tới, các giám đốc tiếp thị sẽ chi tiêu nhiều hơn cho công nghệ so với các giám đốc thông tin. Chỉ một mình cho thấy công nghệ đã trở nên quan trọng như thế nào đối với tiếp thị và cách mỗi doanh nghiệp cần đánh giá nhu cầu của chính họ để tạo ra ngăn xếp tối ưu của họ. Đây là một lĩnh vực mà không có giải pháp phù hợp cho tất cả; các bộ phận tiếp thị cần phải xem xét các yêu cầu, khách hàng và chiến dịch cụ thể của riêng họ và xây dựng hệ thống của họ dựa trên điều này.</p>
-            <p>Lấy hội thảo trên web làm ví dụ. Hội thảo trên web ít nhất sẽ yêu cầu trang đích để mọi người đăng ký, nội dung ở dạng văn bản bán hàng và tiếp thị, chưa kể đến việc thiết lập và chính hội thảo trên web. Sau đó, nó sẽ cần được quảng bá qua email và tiếp thị truyền thông xã hội cũng như nhắm mục tiêu khách hàng và khách hàng tiềm năng thông qua nhóm bán hàng sử dụng giải pháp CRM. Một ví dụ này cho thấy mức độ đi vào từng yếu tố của chiến dịch tiếp thị và cách ngăn xếp MarTech được tích hợp như thế nào khi các bộ phận khác nhau phối hợp hoạt động - thậm chí quảng bá hội thảo trên web liên quan đến một số công nghệ và đây chỉ là một yếu tố của tiếp thị lớn hơn và / hoặc chiến dịch phát triển kinh doanh.</p>
-            <h2 class="mb-3 mt-5">Xây dựng MarTech Stack của bạn</h2>
-            <p>Như đã đề cập, mỗi ngăn xếp MarTech của doanh nghiệp là duy nhất và cụ thể nhưng có một số yếu tố chính mà hầu hết sẽ kết hợp cùng với các công cụ khác từ các phòng ban tích hợp. Dưới đây là một số loại công cụ và công nghệ chính mà bạn mong đợi trong một ngăn xếp MarTech điển hình.</p>
-            <h3 class="mb-3 mt-5">Hệ thống quản lý nội dung (CMS)</h3>
-            <p>Một nền tảng cần thiết để chạy trang web, blog của bạn hoặc sản phẩm dựa trên web khác để tiếp thị kinh doanh trực tuyến. CMS phổ biến vì chúng cho phép các nhóm và nhân viên phi kỹ thuật đăng nhập vào trang web và thực hiện các thay đổi khi cần thiết, tải lên nội dung, v.v.</p>
-            <h3 class="mb-3 mt-5">Công cụ quảng cáo</h3>
-            <p>Các công cụ quảng cáo thường kết hợp các tùy chọn quảng cáo trả tiền nhưng cũng có khả năng theo dõi và đo lường. Các công cụ như Google AdWords, Bing Ads và Facebook Power Editor là ví dụ về các công cụ quảng cáo phổ biến mà bạn có thể chọn để tích hợp vào công nghệ tiếp thị của mình.</p>
-            <h3 class="mb-3 mt-5">Công cụ chuyển đổi</h3>
-            <p>Chuyển đổi lưu lượng truy cập thành khách hàng tiềm năng và khách hàng tiềm năng về cơ bản là điểm cốt lõi của bất kỳ chiến dịch tiếp thị nào. Các công cụ như Crazy Egg theo dõi hành vi trên trang web để bạn có thể chọn ra các khách hàng tiềm năng chuyển đổi và bỏ mua quá cũng rất phổ biến.</p>
-            <h3 class="mb-3 mt-5">Thư điện tử quảng cáo</h3>
-            <p>Tiếp thị qua email là xương sống của hầu hết tất cả các chiến dịch tiếp thị và các công nghệ phù hợp có thể giúp nó thành công hơn nữa, tăng tốc các giai đoạn thử nghiệm và theo dõi kết quả hiệu quả hơn. Một số tổ chức sẽ chọn một công cụ tiếp thị qua email đơn giản giúp thiết kế và có một số yếu tố phân tích trong khi những tổ chức khác yêu cầu thứ gì đó mạnh mẽ hơn nhiều như Infusionsoft.</p>
-            <h3 class="mb-3 mt-5">Truyền thông xã hội</h3>
-            <p>Tất cả các doanh nghiệp sẽ thiết lập các kênh truyền thông xã hội đã chọn và có thể sử dụng các công cụ cụ thể, như Hootsuite và Buffer phổ biến, để tự động hóa chúng. Điều này cũng tạo thành một phần của ngăn xếp MarTech. Cho dù đó chỉ đơn giản là một nền tảng để lên lịch và tự động hóa, một nền tảng mối quan hệ để thúc đẩy tương tác hay một công cụ chuyên sâu để phân tích và đo lường hiệu suất kênh, đều có những công cụ hiệu quả cho tất cả các khía cạnh của mạng xã hội.</p>
-            <h3 class="mb-3 mt-5">Dịch vụ khách hàng</h3>
-            <p>Dẫn đầu từ mạng xã hội là nhu cầu về các công cụ tập trung vào dịch vụ khách hàng. Trải nghiệm khách hàng nên là trọng tâm cốt lõi của bất kỳ chiến dịch tiếp thị nào và các kênh và phương pháp được sử dụng để hình thành trải nghiệm này sẽ bao gồm các phương pháp tiếp thị ở trên như phương tiện truyền thông xã hội, tiếp thị qua email và hơn thế nữa. Dịch vụ khách hàng đã trở nên tập trung rất nhiều vào phương tiện truyền thông xã hội vì khách hàng bình thường hiện mong đợi các thương hiệu sử dụng các kênh xã hội của họ theo cách đó cho dù họ là ngân hàng trên phố cao hay nhà bán lẻ ngách.</p>
-            <h3 class="mb-3 mt-5">Quản trị quan hệ khách hàng</h3>
-            <p>Doanh nghiệp càng tận dụng nhiều kênh tiếp thị thì việc theo dõi và quản lý dữ liệu càng trở nên quan trọng hơn. Hệ thống quản lý quan hệ khách hàng chất lượng tốt giúp ghi lại và theo dõi tất cả các mối quan hệ khách hàng của bạn trên các nền tảng khác nhau. Một hệ thống CRM tốt là điều cần thiết đối với ngăn xếp của bạn vì nó sẽ đảm bảo bạn có thể giám sát đầy đủ hoạt động trên các nền tảng và ứng dụng khác nhau.</p>
-            <h3 class="mb-3 mt-5">Phần mềm tự động hóa</h3>
-            <p>Tự động hóa tiếp thị đã trở nên gần như đồng nghĩa với các chiến dịch và công ty thành công. Các yếu tố bán hàng và tiếp thị có thể hoàn toàn tự động, giúp loại bỏ nhân lực và thời gian lãng phí. Tự động hóa tiếp thị có nhiều quy mô - từ tiếp thị qua email đến các trang đích đáp ứng hoặc từ các công cụ kiểm tra A / B đến phần mềm báo cáo và phân tích.</p>
-            <h3 class="mb-3 mt-5">Phân tích trang web</h3>
-            <p>Google Analytics và các công cụ tương tự khác là cốt lõi của ngăn xếp của bạn. Tích hợp để xem liệu hầu hết các công cụ khác của bạn có đang hoạt động hay không, các công cụ phân tích theo dõi và đo lường tất cả các hoạt động bán hàng và tiếp thị của bạn để bạn có thể xác định cái nào hiệu quả và cái nào không.</p>
-            <h3 class="mb-3 mt-5">Sự cân bằng MarTech</h3>
-            <p>Sự cân bằng tốt là chìa khóa cho một ngăn xếp MarTech thành công và đây là điều bạn thường học được theo thời gian với việc thử và sai các công cụ khác nhau. Khi bạn bắt đầu tích hợp các công nghệ và phát triển nền tảng của mình, bạn sẽ thấy thời gian và sức lực của mình có thể được tập trung vào các yếu tố sáng tạo và đổi mới hơn của tiếp thị, với các công cụ hỗ trợ các lựa chọn và quyết định của bạn.</p>
-            <p><i>Nguồn: MartechAdvisor.com</i></p>
+            <h2 class="mb-3 mt-5">Một ngăn xếp công nghệ tiếp thị là gì?</h2>
+            <p>Công nghệ tiếp thị là một nhóm các công nghệ mà các nhà tiếp thị tận dụng để tiến hành và cải thiện các hoạt động tiếp thị của họ. Thông thường, trọng tâm của công nghệ tiếp thị (hay còn gọi là "martech") là làm cho các quy trình khó khăn trở nên dễ dàng hơn và đo lường tác động của các hoạt động tiếp thị và thúc đẩy chi tiêu hiệu quả hơn.</p>
+            <h2 class="mb-3 mt-5">Tại sao các nhà tiếp thị quan tâm đến công nghệ tiếp thị của họ?</h2>
+            <p>Bối cảnh công nghệ tiếp thị đang phát triển nhanh chóng, với hàng trăm công nghệ phần mềm khác nhau chen chúc với số lượng ngày càng tăng. Trong một cuộc khảo sát gần đây các CMO, 27% quan tâm đến việc đi đầu và tận dụng các xu hướng công nghệ kỹ thuật số này (Nguồn: Korn Ferry).</p>
+            <p>Với rất nhiều lựa chọn, điều cần thiết là các nhà tiếp thị phải hiểu rõ ràng về công nghệ nào là cơ bản nhất đối với mục tiêu kinh doanh của họ và hiểu cách công nghệ có thể giúp họ ảnh hưởng tích cực đến hoạt động kinh doanh của mình.</p>
+            <h2 class="mb-3 mt-5">Các thành phần của ngăn xếp công nghệ tiếp thị</h2>
+            <p>Loại hình kinh doanh bạn có cũng sẽ ảnh hưởng đến công nghệ nào bạn có thể thấy quan trọng và cách tổ chức chúng. Điểm khác biệt chính là doanh nghiệp của bạn bán sản phẩm hoặc dịch vụ của mình cho người tiêu dùng (B2C) hay cho doanh nghiệp (B2B). Các nhà tiếp thị B2C và B2B sẽ sử dụng các kênh và kỹ thuật khác nhau để có được khách hàng và do đó sẽ có các nhu cầu công nghệ khác nhau.</p>
+            <p>Điều quan trọng nữa là bạn phải biết bộ kỹ năng và thành viên nhóm nào bạn cần có để đảm bảo rằng nhóm tiếp thị của bạn nhận được lợi ích tối đa từ các công nghệ bạn có.</p>
+            <p>Dưới đây là một số loại vai trò tiếp thị cần xem xét khi nghĩ về cách công nghệ tiếp thị của bạn sẽ khen ngợi nhóm của bạn:</p>
+            <li><p>Thu hút khách hàng - tiếp thị trực tuyến, tiếp thị đối tác, tiếp thị sự kiện, tối ưu hóa trang web</p></li>
+            <li><p>Thương hiệu & Truyền thông - truyền thông xã hội, quan hệ công chúng, tài trợ, quảng cáo phát sóng</p></li>
+<li><p>Tiếp thị sản phẩm - tiếp thị sản phẩm, quan hệ nhà phân tích, tiếp thị nội dung</p></li>
+<li><p>Hoạt động tiếp thị - hiệu suất chiến dịch, phân tích dữ liệu và thông tin chi tiết Đặc biệt, hoạt động tiếp thị (hoặc hoạt động tiếp thị) là một vai trò quan trọng sẽ giúp cho phép những người còn lại trong nhóm tiếp thị đưa ra quyết định thông minh với dữ liệu tiếp thị của bạn. Nhiều chuyên gia tiếp thị khuyên rằng đây là vai trò quan trọng cần có khi phát triển đội ngũ.</p></li>
             <div class="tag-widget post-tag-container mb-5 mt-5">
                <div class="tagcloud">
                   <a href="#" class="tag-cloud-link">MarTech</a>
