--- a/SaaS.html
+++ b/SaaS.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>MarTech Zone Blog - Tổng hợp cái nhìn toàn diện về SaaS</title>
+    <title>Tổng hợp cái nhìn toàn diện về SaaS - loại hình phần mềm đang dẫn đầu xu hướng công nghệ toàn cầu</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -64,30 +64,32 @@
 <p class="mb-5">
               <img src="images/Software-as-a-Service-SaaS-1.jpg" alt="" class="img-fluid">
             </p>
-<p>Thông qua bài viết này, MarTech Zone sẽ giúp bạn có cái nhìn chính xác hơn về xu hướng Marketing Technology và cách thức MarTech tác động và thay đổi môi trường kinh doanh hiện nay.</p>
 
 <h2 class="mb-3 mt-5">SaaS là gì?</h2>
 
-<p>SaaS (Software-as-a-Service) là một trong những dạng điện toán đám mây phổ biến nhất - được định nghĩa là mô hình phân phối dịch vụ ứng dụng phần mềm. Trong đó nhà cung cấp không bán sản phẩm phần mềm mà bán dịch vụ dựa trên phần mềm đó. Nói đơn giản hơn, nhà cung cấp tạo ra và duy trì một phần mềm chạy trên nền web, và khách hàng có thể truy cập từ xa thông qua internet sau khi trả một khoản phí đăng ký định kỳ (hàng tháng, quý, năm).</p>
+<p>SaaS hay Software-as-a-Service là một trong những dạng điện toán đám mây phổ biến nhất - được định nghĩa là mô hình phân phối dịch vụ ứng dụng phần mềm. Trong đó nhà cung cấp không bán sản phẩm phần mềm mà bán dịch vụ dựa trên phần mềm đó. Các nhà cung cấp SaaS sử dụng internet để cung cấp phần mềm cho người dùng cuối. Việc sử dụng thường dựa trên đăng ký, với một khoản phí định kì hàng tháng hoặc hàng năm. Người dùng SaaS thường không phải nâng cấp các giải pháp tốn kém hoặc kéo dài vì chúng dựa trên đám mây, các nâng cấp được quản lý bởi nhà cung cấp giải pháp.</p>
 <p class="mb-5">
               <img src="images/saas-integration-applications-1.png" alt="" class="img-fluid">
             </p>
 <p>SaaS được coi là mô hình 4.0 ưu việt hơn so với phần mềm on-premise - dạng phần mềm được doanh nghiệp mua lại thông qua một giấy phép vĩnh viễn. Người dùng có thể mở chạy ứng dụng thông qua trình duyệt mà không cần phải cài đặc. Office365, Gmail, Hotmail, Outlook là những saas tiêu biểu. Hay một vài phần mềm được phát triển rộng rãi bởi nhà cung cấp saas hàng đầu như Amazon web Service, Slack, Oracle, Adobe Creative Cloud, Dropbox, Google, IBM, Microsoft,…</p>
-<h2 class="mb-3 mt-5">Ưu điểm của mô hình SaaS</h2>
-<h3 class="mb-3 mt-5">1. Tiết kiệm chi phí cho doanh nghiệp</h3>
+<h2 class="mb-3 mt-5">Ý nghĩa của SaaS đối với doanh nghiệp</h2>
 <p class="mb-5">
               <img src="images/Fotolia_172854267_XS.jpg" alt="" class="img-fluid">
             </p>
-            <p>SaaS giúp doanh nghiệp tiết kiệm được cả chi phí tiền mặt, thời gian, nhân lực, chi phí chuyển đổi và chi phí cơ hội.</p>
-            <p>Với mô hình SaaS, bạn không cần cài đặt và chạy các phần mềm trên hệ thống của doanh nghiệp. Điều đó giúp bạn tiết kiệm được một khoản chi phí rất lớn liên quan tới việc mua giấy phép phần mềm, lắp đặt phần cứng cũng như xây dựng hệ cơ sở dữ liệu mới. Trong suốt quá trình sử dụng, mô hình SaaS không đòi hỏi bạn phải trả thêm phí hỗ trợ và bảo trì định kỳ nào.</p>
-            <p>Hầu hết các mô hình SaaS hiện nay đều tập trung vào và bán các dịch vụ phần mềm dưới hai dạng: Freemium - cho phép bạn dùng miễn phí trước rồi trả thêm tiền để sử dụng các tính năng nâng cao, và Premium - bán theo gói dựa trên số lượng tài khoản và thời gian sử dụng. Trong cả hai trường hợp, bạn đều có quyền lựa chọn ngừng đăng ký dịch vụ SaaS bất cứ khi nào bạn muốn, và chi phí cũng ngừng luôn tại thời điểm đó.</p>
-            <p>Thời gian và nhân lực cần thiết để triển khai một phần mềm SaaS cũng tiết kiệm hơn hẳn so với giải pháp on-premise truyền thống. Với đội ngũ hỗ trợ (thường chỉ gồm 1-2 thành viên) của nhà cung cấp SaaS, họ chỉ cần tối đa là 2 ngày để thiết lập tài khoản và training sử dụng phần mềm cho toàn bộ nhân viên trong doanh nghiệp.</p>
-            <p>Mô hình SaaS cũng giúp doanh nghiệp giải bài toán chi phí chuyển đổi khi lắp đặt và áp dụng công nghệ. Phần mềm SaaS được ví như một chiếc xe bus, bạn chỉ cần bỏ ra số tiền vừa phải để được chở đi đến bất cứ nơi nào bạn muốn mà không cần mua chiếc xe mới hay quá lo lắng cho việc chiếc xe bị hỏng hóc giữa đường.</p>
-            <h3 class="mb-3 mt-5">2. Luôn nhận được các tính năng phần mềm tốt nhất</h3>
+            <p>Vì SaaS có thể được truy cập từ bất kỳ thiết bị nào có trình duyệt web và kết nối internet, nên các nhóm có thể dễ dàng sử dụng nó tại văn phòng hoặc khi đang di chuyển. Bản thân ứng dụng đám mây được lưu trữ trên máy chủ của nhà cung cấp, cho phép thiết lập ngay lập tức, đơn giản, cũng như cập nhật liền mạch mà không cần thời gian ngừng hoạt động hoặc hỗ trợ tại chỗ. Ngoài ra SaaS cũng không có thiết bị bổ sung để mua hoặc phát triển để đầu tư vào và đặc biệt không chiếm dung lượng lưu trữ trên thiết bị của khách hàng.</p>
+            <h2 class="mb-3 mt-5">Ưu điểm của mô hình SaaS</h2>
             <p>Các nhà cung cấp SaaS luôn thường xuyên tự động cập nhật phần mềm, bao gồm cả việc tối ưu các tính năng cũ và bổ sung thêm các tính năng cao cấp hơn. Bạn không cần một bộ phận IT luôn túc trực để xử lý vấn đề kỹ thuật trong quá trình vận hành phần mềm nữa. Từ việc đảm bảo hệ thống máy chủ chạy tốt, duy trì bảo mật đến fix các bugs phát sinh,... đều được nhà cung cấp chịu trách nhiệm. Đội ngũ tester và IT của họ làm rất tốt phần này, và bạn sẽ luôn được sử dụng dịch vụ tốt nhất từ phía họ.</p>
-<h3 class="mb-3 mt-5">3. Dễ dàng sử dụng ở mọi lúc, mọi nơi</h3>         
+<h3 class="mb-3 mt-5">1. Tiết kiệm chi phí cho doanh nghiệp</h3>         
+<p>SaaS giúp doanh nghiệp tiết kiệm được cả chi phí tiền mặt, thời gian, nhân lực, chi phí chuyển đổi và chi phí cơ hội.</p>
+<p>Với mô hình SaaS, bạn không cần cài đặt và chạy các phần mềm trên hệ thống của doanh nghiệp. Điều đó giúp bạn tiết kiệm được một khoản chi phí rất lớn liên quan tới việc mua giấy phép phần mềm, lắp đặt phần cứng cũng như xây dựng hệ cơ sở dữ liệu mới. Trong suốt quá trình sử dụng, mô hình SaaS không đòi hỏi bạn phải trả thêm phí hỗ trợ và bảo trì định kỳ nào.</p>
+<p>Hầu hết các mô hình SaaS hiện nay đều tập trung vào và bán các dịch vụ phần mềm dưới hai dạng: Freemium - cho phép bạn dùng miễn phí trước rồi trả thêm tiền để sử dụng các tính năng nâng cao, và Premium - bán theo gói dựa trên số lượng tài khoản và thời gian sử dụng. Trong cả hai trường hợp, bạn đều có quyền lựa chọn ngừng đăng ký dịch vụ SaaS bất cứ khi nào bạn muốn, và chi phí cũng ngừng luôn tại thời điểm đó.</p>
+<p>Thời gian và nhân lực cần thiết để triển khai một phần mềm SaaS cũng tiết kiệm hơn hẳn so với giải pháp on-premise truyền thống. Với đội ngũ hỗ trợ (thường chỉ gồm 1-2 thành viên) của nhà cung cấp SaaS, họ chỉ cần tối đa là 2 ngày để thiết lập tài khoản và training sử dụng phần mềm cho toàn bộ nhân viên trong doanh nghiệp.</p>
+<p>Mô hình SaaS cũng giúp doanh nghiệp giải bài toán chi phí chuyển đổi khi lắp đặt và áp dụng công nghệ. Phần mềm SaaS được ví như một chiếc xe bus, bạn chỉ cần bỏ ra số tiền vừa phải để được chở đi đến bất cứ nơi nào bạn muốn mà không cần mua chiếc xe mới hay quá lo lắng cho việc chiếc xe bị hỏng hóc giữa đường.</p>
+<h3 class="mb-3 mt-5">2. Luôn nhận được các tính năng phần mềm tốt nhất</h3>        
+<p>Các nhà cung cấp SaaS luôn thường xuyên tự động cập nhật phần mềm, bao gồm cả việc tối ưu các tính năng cũ và bổ sung thêm các tính năng cao cấp hơn. Bạn không cần một bộ phận IT luôn túc trực để xử lý vấn đề kỹ thuật trong quá trình vận hành phần mềm nữa. Từ việc đảm bảo hệ thống máy chủ chạy tốt, duy trì bảo mật đến fix các bugs phát sinh,... đều được nhà cung cấp chịu trách nhiệm. Đội ngũ tester và IT của họ làm rất tốt phần này, và bạn sẽ luôn được sử dụng dịch vụ tốt nhất từ phía họ.</p>
+<h3 class="mb-3 mt-5">3. Dễ dàng sử dụng ở mọi lúc, mọi nơi</h3>
 <p>Người dùng dễ dàng truy cập phần mềm từ bất kỳ thiết bị và trình duyệt nào có kết nối Internet vì các nhà cung cấp SaaS triển khai dịch vụ thông qua Internet. Khi doanh nghiệp đăng ký sử dụng phần mềm, bạn được phép tạo thêm tài khoản (với giới hạn số lượng tuỳ theo gói đã mua) cho nhân viên trong doanh nghiệp. Bạn và nhân viên có thể ngồi ở bất cứ đâu, tại bất cứ thời gian nào, thực hiện thao tác đăng nhập đơn giản và sử dụng các tính năng không giới hạn.</p>
-<h3 class="mb-3 mt-5">4. Khả năng tích hợp cực kỳ lớn</h3>        
+<h3 class="mb-3 mt-5">4. Khả năng tích hợp cực kỳ lớn</h3>
 <p>Hầu hết các phần mềm SaaS hiện nay đều được tối ưu hệ thống API - giao diện lập trình ứng dụng mở cho phép đồng nhất và trao đổi dữ liệu qua lại giữa các ứng dụng đến từ nhiều bên cung cấp khác nhau. Đó chính là cơ hội để bạn và doanh nghiệp hội nhập nhanh hơn với các công nghệ mới ngay trên chính hệ thống hiện tại của mình.</p>
 <h3 class="mb-3 mt-5">5. Dễ dàng mở rộng quy mô sử dụng</h3>
 <p>Một ưu điểm lớn của dữ liệu đám mây nói chung và SaaS nói riêng là khả năng mở rộng. Bạn dễ dàng tăng gấp đôi, gấp 3,... số lượng tài khoản hoặc tích hợp thêm các phần mềm mới mà không ảnh hưởng tới cơ sở hạ tầng hay cơ sở dữ liệu có sẵn của doanh nghiệp. Điều này đặc biệt quan trọng đối với các doanh nghiệp đang trên đà tăng trưởng nóng hoặc bạn đang có dự định mở rộng quy mô trong tương lai.</p>
