--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+    <meta name="google-site-verification" content="e8uPhGav1QTQFZZbI3eEafa9hC3lBGwFmR8a0DbRr1Y" />
   </head>
   <body>
     
